[tool.poetry]
name = "repl_nix_stock-linechat-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
line-bot-sdk = "^2.4.2"
Flask = "^2.2.3"
wagtail-blog = "^2.3.5"
yfinance = "0.2.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
